fix: keep list tags as NbtList when updaters rebuild item NBT